# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml
magic_demo/: __main__.py
src/: __main__.py
src/magic_demo/: __main__.py
src/sample_project/: __main__.py
tests/: test_docker.py
