[tool.poetry]
name = "magic-demo"
version = "0.1.0"
description = ""
authors = ["Silvertide7 <natephillips801@gmail.com>"]
readme = "README.md"
packages = [{include = "magic_demo"}]

[tool.poetry.dependencies]
python = "^3.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


