[tool.poetry]
name = "magic-demo"
version = "0.1.0"
description = ""
authors = ["Silvertide7 <natephillips801@gmail.com>"]
readme = "README.md"
packages = [{include = "src/magic_demo"}]

[tool.poetry.dependencies]
python = "^3.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
ruff = "^0.6.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


